# taurex3

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: constraints.txt  docs-pages.yml  labeler.yml  lint.yml  on-release-main.yml  release.yml  tests.yml
docs/: citation.rst  conf.py  index.md  index.rst  plugins_cata.rst  reference.md  requirements.txt  usage.md
docs/api/: modules.rst  taurex.catalogue.rst  taurex.chemistry.rst  taurex.cia.rst  taurex.contributions.rst  taurex.mixin.rst  taurex.model.rst  taurex.opacity.rst  taurex.pressure.rst  taurex.stellar.rst
docs/devel/: basics.rst  components.rst  fittingparameters.rst  guidelines.rst  mixins.rst  overview.rst  plugins.rst  recipes.rst
docs/examples/: 01_setup_and_data.ipynb  02_atmosphere_components.ipynb  03_transmission_basics.ipynb  04_emission_basics.ipynb  05_clouds.ipynb  06_inspecting_profiles.ipynb  07_contribution_analysis.ipynb  08_parameter_files.ipynb  09_binning.ipynb  10_retrievals.ipynb  11_multimodel.ipynb  index.rst
docs/user/: index.rst  installation.rst  introduction.rst  mpi.rst  plugins.rst  support_data_formats.rst
examples/notebooks/: 01_setup_and_data.ipynb  02_atmosphere_components.ipynb  03_transmission_basics.ipynb  04_emission_basics.ipynb  05_clouds.ipynb  06_inspecting_profiles.ipynb  07_contribution_analysis.ipynb  08_parameter_files.ipynb  09_binning.ipynb  10_retrievals.ipynb  11_multimodel.ipynb  12_phoenix4all_and_catalogue.ipynb  _shared.py
examples/parfiles/: custom_chemistry.par  custom_selfretrieval.par  custom_temp.par  multimodel_east.par  multimodel_main.par  multimodel_west.par  multinest.par  nestle.par  quickstart.par  transmission_equil.par  transmission_model.par
src/taurex/: __init__.py  _citation.py  _version.py  chemistry.py  constants.py  exceptions.py  mpi.py  planet.py  pressure.py  spectrum.py  stellar.py  taurex.py  taurexdefs.py  temperature.py  types.py
tests/: __init__.py  conftest.py  test_binning.py  test_core.py  test_main.py  test_modelload.py  test_opac.py  test_pressure.py
tests/benchmark/: test_bb.py  test_bilinear_interps.py  test_contrib_funcs.py  test_emission_funcs.py  test_linear_interps.py
tests/chemistry/: __init__.py  test_chemistry.py  test_constantgas.py  test_free_chemistry.py  test_powergas.py
tests/cia/: __init__.py  test_cia.py
tests/citation/: test_citation.py
tests/contribution/: __init__.py  test_cia.py  test_contribution.py  test_pymiescatt_grid.py
tests/core/: test_fit.py
tests/mixin/: __init__.py  test_core.py
tests/model/: __init__.py  test_dimodel.py  test_multimodel.py
tests/optimizer/: __init__.py  test_nestle.py  test_optimizer.py
tests/parameter/: __init__.py  test_binning_parser.py  test_classfactory.py  test_factory.py  test_keywords.py
tests/priors/: __init__.py  test_nonuniform.py  test_priors.py
tests/spectrum/: __init__.py  test_spectrum.py
tests/stellar/: __init__.py  test_blackbody.py  test_fittables.py  test_phoenix.py  (+1 more)
(+172 files in other folders)
