[tool.poetry]
name = "taurex"
version = "3.3.0"
description = "TauREx3"
authors = ["Ahmed Faris Al-Refaie <ahmed.al-refaie.12@ucl.ac.uk>"]
license = "BSDv3"
readme = "README.md"
homepage = "https://github.com/ahmed-f-alrefaie/taurex3"
repository = "https://github.com/ahmed-f-alrefaie/taurex3"
documentation = "https://taurex3.readthedocs.io"
packages = [
    { include = "taurex", from = "src" },
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Unix',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering',
    'Topic :: Software Development :: Libraries',
]

[tool.poetry.urls]
Changelog = "https://github.com/ahmed-f-alrefaie/taurex3/releases"

[tool.poetry.dependencies]
python = "^3.10"
click = ">=8.0.1"
numpy = "^2.0.2"
astropy = ">=6.0.0"
scipy = ">=1.11.3"
configobj = "^5.0.0"
h5py = "^3.9.0"
nestle = "^0.2.0"
tabulate = "^0.9.0"

# Optional packages
numba = { version = ">=0.60.0", optional = true}
pybtex = { version = "^0.24.0", optional = true}
pylightcurve = {version = "^4.0.1", optional = true}
pymultinest = {version = "^2.12", optional = true}

[tool.poetry.extras]
numba = ["numba"]
biblio = ["pybtex"]
multinest = ["pymultinest"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.0"
pygments = "^2.19.1"
black = "^24.10.0"
coverage = {extras = ["toml"], version = "^7.6.10"}
darglint = "^1.8.1"
flake8 = "^7.1.1"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.12.12"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
furo = "^2024.8.6"
isort = "^5.13.2"
mypy = "^1.14.1"
pep8-naming = "^0.14.1"
pre-commit = "^4.0.1"
pre-commit-hooks = "^5.0.0"
pytest = "^8.3.4"
pyupgrade = "^3.19.1"
safety = "^3.2.14"
sphinx = "<8"
sphinx-autobuild = "^2024.10.3"
sphinx-click = "^6.0.0"
typeguard = "^4.4.1"
xdoctest = "^1.2.0"
myst-parser = "<4"
ipympl = "^0.9.6"
hypothesis = "^6.123.7"
snakeviz = "^2.2.2"
nbsphinx = "^0.9.6"

[tool.pytest.ini_options]
markers = [
    "slow: Slow running tests, deselect with ('-m \"not slow\"')"
]


[tool.poetry.scripts]
taurex = "taurex.taurex:main"
taurex-plot = "taurex.plot.plotter:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["taurex", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

